# blame

./: .gitignore  README.md
local/: README.md  pyproject.toml
local/src/blame/: cli.py  core.py
web/: .env.example  README.md  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/card/[owner]/[repo]/: route.tsx
web/src/app/api/github/: route.ts
web/src/components/: Background.tsx  BlameApp.tsx  ResultsTable.tsx  ScanForm.tsx  ScanLog.tsx
web/src/lib/: fuzzy.ts  github.ts
